--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
-    "http-proxy-middleware": "^1.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
@@ -29,7 +28,8 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "weixinjs": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://xmmlwl.com"
 }
