--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-transition-group": "^4.4.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5",
-    "weixin-js-sdk": "^1.6.0",
-    "weixin-jsapi": "^1.1.0"
+    "weixin-js-sdk": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
