--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
     "@types/better-scroll": "^1.12.2",
+    "@types/dplayer": "^1.25.0",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.41",
@@ -19,8 +20,10 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.2.4",
     "@types/redux-thunk": "^2.1.0",
+    "@types/video.js": "^7.3.9",
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
+    "dplayer": "^1.25.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
